[package]
name = "pomodoro"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
rodio = "0.17.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
project-root = "0.2.2"
log = "0.4.21"
env_logger = "0.11.3"
crossterm = "0.27.0"
thiserror = "1.0.59"

[build-dependencies]
winres = "0.1.12"
