[package]
name = "locking-pomodoro-timer"
version = "1.2.1"
edition = "2021"
authors = ["David Zanger"]
license = "GPL-3.0"
description = "A Pomodoro timer with the capability of locking the screen."
readme = "README.md"
repository = "https://github.com/davidzanger/Locking-Pomodoro-Timer"
keywords = ["pomodoro", "timer","rust", "cli"]
categories = ["command-line-utilities"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
rodio = "0.17.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
anyhow = "1.0.81"
project-root = "0.2.2"
log = "0.4.21"
crossterm = "0.27.0"
thiserror = "1.0.59"
embed-doc-image = "0.1.4"
log4rs = { version = "1.3.0", features = ["file_appender", "pattern_encoder"] }

[build-dependencies]
winres = "0.1.12"
